src/App.css
* {
  box-sizing: border-box;
}

body {
  background-color: rgb(39, 32, 39);
  color: #c6b5e1;
}
.App {
  align-items: center;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.nav-buttons {
  text-decoration: none;
  color: initial;
  background-color: #b090eb;
  border: none;
  border-radius: 5px;
  padding: 10px;
  cursor: pointer;
  transition: background-color 300ms;
}
.nav-buttons:hover {
  background-color: #7e4cc0;
}
.nav-buttons:active {
  color: initial;
}

.nav-button-active {
  border: 1px solid white;
  background-color: #884cc0;
}

.content-container {
  margin-top: 30px;
  margin: 10px;
}

button {
  background-color: #b090eb;
  border: none;
  border-radius: 5px;
  padding: 10px;
  cursor: pointer;
  transition: background-color 300ms;
}
button:hover {
  background-color: #7e4cc0;
}

.buttons-container {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
  margin: 10px;
}
.info {
  margin-top: 10px;
  color: #bab1e0b5;
}
.info button {
  background-color: #9771bd4f;
}
.info button:hover {
  background-color: #9771bd91;
}

/* stone paper scissor */

.choice span {
  margin-right: 10px;
  border: 1px solid;
  padding: 5px;
  cursor: pointer;
  border-radius: 10px;
}
.choice span:hover {
  background-color: #9453de43;
}

/* quotes */

.quotes-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.fetch-button {
  align-self: center;
  border: 1px solid #dfcef3;
  color: #dfcef3;
  background-color: #35006651;
  margin-right: 10px;
}
.fetch-button:hover {
  background-color: #7a5bb58e;
}

/* form  */

.form-container {
  display: flex;
  justify-content: center;
  background-color: #3400504b;
  border: 2px solid #bc86ff;
  border-radius: 15px;
  width: 500px;
  padding: 0 30px 30px;
}

@media screen and (max-width: 550px) {
  .form-container {
    max-width: 400px;
  }
}
@media screen and (max-width: 400px) {
  .form-container {
    max-width: 300px;
  }
}

.form {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 15px;
}

.form label {
  display: block;
}

.form input {
  width: 100%;
  border: none;
  border-radius: 5px;
  padding: 10px;
  outline-color: #bc86ff;
}

.form-link {
  color: #ca74f9;
  text-decoration: underline;
  cursor: pointer;
}
.form-link:hover {
  color: #ab0fff;
}

.form-errors {
  margin: 0;
  color: #d86262;
}

/* to-do list */
.todo-list {
  background-color: #3400504b;
  border: 2px solid #bc86ff;
  border-radius: 15px;
  max-width: 500px;
  padding: 0 30px 30px;
  min-height: 400px;
}

.inputField {
  display: grid;
  grid-template-columns: 4fr 1fr;
  justify-content: center;
  gap: 10px;
}

.inputField input {
  width: 100%;
  border: none;
  border-radius: 5px;
  padding: 10px;
  outline-color: #bc86ff;
}

.tasks-field {
  border-radius: 10px;
  margin: 1rem 0 1rem 0;
  padding: 10px;
  color: #381e46;
  background-color: #cfb4ef;
}
.tasks-field ul {
  list-style: none;
}

.tasks-field li {
  justify-content: space-between;
  display: grid;
  grid-template-columns: repeat(10, auto);
  border-bottom: 1px solid #a68caf;
  padding: 5px;
}

.list-index {
  color: #79658f;
}

.task-delete {
  color: #de5087;
  text-decoration: underline;
  cursor: pointer;
  grid-column: 10;
}
.task-delete:hover {
  color: #ff0062;
}
.task-edit {
  margin-bottom: 5px;
  color: #352e96;
  text-decoration: underline;
  cursor: pointer;
  grid-column: 10;
}
.task-edit:hover {
  color: #385baf;
}

/* redux task field */
.taskField {
  padding: 5px;
  border-radius: 5px 0 0 5px;
  border: none;
}
.taskField:disabled {
  color: #2b0e3b;
  background: transparent;
}

.taskUpdateButton {
  padding: 5px;
  border-radius: 0 5px 5px 0;
}

/* tic tac toe */
.tictac-container {
  position: relative;
  margin: 10px;
  padding: 5px;
  border-radius: 5px;
  border: 5px solid #c2a5d2;
  background-color: #2b0e3b;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  height: 500px;
  width: 500px;
  gap: 5px;
}

@media screen and (max-width: 550px) {
  .tictac-container {
    height: 400px;
    width: 400px;
  }
}
@media screen and (max-width: 410px) {
  .tictac-container {
    height: 300px;
    width: 300px;
  }
}

.tictac-cols {
  background-color: #79658f;
  border-radius: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.tictac-button {
  width: 100px;
  align-self: center;
  border: 1px solid #dfcef3;
  color: #dfcef3;
  background-color: #4e036351;
  margin-right: 10px;
}
@keyframes highlight {
  0%,
  40%,
  80% {
    background-color: #9771bd;
    border: 1.5px solid #9d00ff;
  }
  20%,
  60% {
    background-color: #9d65f6;
  }
  100% {
    background-color: #4e036351;
  }
}
.highlighted {
  color: #2b0e3b;
  animation: highlight 1s;
}

.tictac-score {
  display: flex;
  justify-content: space-around;
  height: 100px;
}

.tictac-text {
  margin: 0;
  padding: 0;
  font-size: 50px;
}

.tictac-cols-hover:hover {
  cursor: pointer;
  background-color: #9671bd;
}

.tictac-turn {
  color: #7d59bc;
}

.winner-overlay {
  position: absolute;
  display: flex;
  background-color: #29033e89;
  width: 100%;
  height: 100%;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

/* counter */

.counter-buttons {
  margin-top: 10px;
  display: flex;
  justify-content: center;
  gap: 10px;
}

